--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,8 @@
                     </ul>
                     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted"><span>Workflows</span></h6>
                     <ul class="nav flex-column mb-2">
-                         <li class="nav-item"><a class="nav-link" href="/procurement/material-requisitions"><i class="bi bi-cart-check me-2"></i> Procurement</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/job-card-tracking"><i class="bi bi-card-checklist me-2"></i> Job Card Tracking</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/procurement/material-requisitions"><i class="bi bi-cart-check me-2"></i> Procurement</a></li>
                     </ul>
                 </div>
             </nav>
